# AceConn

./: AceConn-1.1.pc.in  COPYING  INSTALL  NEWS  README  acinclude.m4  bootstrap  configure.ac  configure.in
include/: AceConn.h  AceConnProto.h
src/: .cvsignore  Makefile.am  aceconn.c  aceconn_.h  aceconnsock.c  aceconnutils.c
test/: Makefile.am  simpleclient.c  simpletest.c
